force-app/main/default/objects/xtma_Email_Result__c/fields/From_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Address__c</fullName>
    <label>From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>