force-app/main/default/objects/xtma_Email_Result__c/fields/Invalid_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Addresses__c</fullName>
    <label>Invalid Addresses</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>