force-app/main/default/objects/xtma_Email_Result__c/fields/Number_of_Hard_Bounces__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hard_Bounces__c</fullName>
    <description>Number of hard bounces.</description>
    <label>Number of Hard Bounces</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>