force-app/main/default/objects/xtma_Email_Result__c/fields/Number_of_Leads__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Leads__c</fullName>
    <description>Number of lead records.</description>
    <label>Number of Leads</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>