force-app/main/default/objects/xtma_Email_Result__c/fields/Number_of_Subscribers_Forwarding_Email__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Subscribers_Forwarding_Email__c</fullName>
    <description>Number of subscribers who used Forward to a Friend.</description>
    <label>Number of Subscribers Forwarding Email</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>