force-app/main/default/objects/xtma_Email_Result__c/fields/Number_of_Unique_Clicks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Unique_Clicks__c</fullName>
    <label>Number of Unique Clicks</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>