force-app/main/default/objects/xtma_Email_Result__c/fields/Number_Sent__c.field-meta.xml
<CustomField>
    <fullName>Number_Sent__c</fullName>
    <label>Number Sent</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>