force-app/main/default/objects/xtma_Email_Result__c/fields/Number_Unsubscribed__c.field-meta.xml
<CustomField>
    <fullName>Number_Unsubscribed__c</fullName>
    <label>Number Unsubscribed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>