force-app/main/default/objects/xtma_Email_Result__c/fields/Records_without_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Records_without_Addresses__c</fullName>
    <label>Records without Addresses</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>