force-app/main/default/objects/xtma_Email_Result__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>