force-app/main/default/objects/xtma_Email_Result__c/fields/Total_Number_of_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Records__c</fullName>
    <label>Total Number of Records</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>